--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
         "dom.iterable",
         "esnext"
       ],
-      // "module": "commonjs",
-      "module": "esnext",
+      "module": "commonjs",
       "strict": true,
       "allowJs": true,
       "skipLibCheck": true,
